[project]
name = "liesel_ptm"
dynamic = ["version"]
description = "Bayesian Penalized Transformation Models in Liesel"
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [
    { name = "Johannes Brachem" },
]
dependencies = [
    "liesel @ git+https://github.com/liesel-devs/liesel.git",
    "plotnine>=0.14.5",
    "interpax>=0.3.10",
    "properscoring>=0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.15.0",
    "myst-nb>=1.3.0",
    "nbval>=0.11.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.4",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-book-theme>=1.1.4",
    "sphinx-copybutton>=0.5.2",
    "sphinx-remove-toctrees>=1.0.0.post1",
]

[tool.pytest.ini_options]
testpaths = "tests"
# turn warnings into errors and filter out specific warnings
filterwarnings = [
    "error",
    # "ignore::DeprecationWarning:tensorflow_probability",
    "ignore:invalid escape sequence.*:SyntaxWarning:properscoring.*",
    "ignore:jax.interpreters.xla.pytype_aval_mappings is deprecated:DeprecationWarning:tensorflow_probability.python.internal.backend.jax.ops",
    "ignore:shape requires ndarray or scalar arguments, got <class 'NoneType'> at position 0. In a future JAX release this will be an error.:DeprecationWarning:tensorflow_probability.python.internal.backend.jax.random_generators",
    "ignore:.*interactive_bk attribute was deprecated in Matplotlib 3.9.*:matplotlib._api.deprecation.MatplotlibDeprecationWarning",

    # Caused by the use in blackjax
    "ignore:JAXopt is no longer maintained:DeprecationWarning",
]

[tool.ruff.lint]
extend-select = [
    "F",  # pyflakes (flake8 core)
    "E",  # pycodestyle errors (flake8)
    "W",  # pycodestyle warnings (flake8)
    "I",  # isort (import sorting)
    "UP", # pyupgrade (modern syntax)
]
unfixable = ["F401"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false


[tool.mypy]
files = ["liesel_ptm", "tests"]
ignore_missing_imports = true
scripts_are_modules = true
disable_error_code = "annotation-unchecked"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "liesel_ptm/__about__.py"

[tool.hatch.metadata]
allow-direct-references = true
